--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -7,12 +7,12 @@
 
 
 <div style="text-align:center; margin-top:80px;"><p style="text-align:center;">@Html.Partial("_LoginPartial")</p></div>
+<h5 style="text-align:center; color:#76ff03; margin-top:10px;">@TempData["successTransactionAdded"]</h5>
 <h3 style="text-align:center; color:#cfd8dc; margin-top:100px;">Budget App</h3>
 <div style="border-bottom: 1px dotted #cfd8dc;"></div>
 
 
 <div class="container">
-
     <div style="margin-top:55px; text-align:center;">
         <a href='@Url.Action("Index", "Budgets", new { userName = user })'; class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
         @*@Html.ActionLink("Return to Budget", "Index", "Budgets", new { userName = user }, new { @class = "grey-button" })*@
@@ -393,59 +393,4 @@
     
 </script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@*<h2>AddTransaction</h2>
-
-    <h4>BudgetItems</h4>
-    <hr />
-    <div class="row">
-        <div class="col-md-4">
-            <form asp-action="AddTransaction">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Email" class="control-label"></label>
-                    <input asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Description" class="control-label"></label>
-                    <input asp-for="Description" class="form-control" />
-                    <span asp-validation-for="Description" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Cost" class="control-label"></label>
-                    <input asp-for="Cost" class="form-control" />
-                    <span asp-validation-for="Cost" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="TypeOfBudget" class="control-label"></label>
-                    <select asp-for="TypeOfBudget" class="form-control"></select>
-                    <span asp-validation-for="TypeOfBudget" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-default" />
-                </div>
-            </form>
-        </div>
-    </div>
-
-    <div>
-        <a asp-action="Index">Back to List</a>
-    </div>*@
 
