--- a/MyWebsite/Views/Budgets/Edit.cshtml
+++ b/MyWebsite/Views/Budgets/Edit.cshtml
@@ -22,7 +22,7 @@
     <div style="margin-top:55px; text-align:center;">
         <a href='@Url.Action("Index", "Budgets", new { userName = user })' ; class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
     </div>
-    <h5 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">Edit Budget Limit(<i class="material-icons prefix" style="vertical-align:middle; color:#b2dfdb;">attach_money</i>)</h5>
+    <h5 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#b2dfdb; text-align:center">Edit Budget Limits</h5>
 
     <form asp-action="Edit">
 
@@ -30,50 +30,57 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="Email" />
-            <div class="form-group col s12 m4 l4">
-                <label for="GroceryLimit" style="color:#b2dfdb; font-weight:bold; font-size:25px;">Grocery Budget</label>
+            <div class="col s12 m3 l3"></div>
+            <div class="form-group col s12 m3 l3">
+                <label for="GroceryLimit" style="color:#cfd8dc;; font-weight:bold; font-size:25px;">Grocery Budget</label>
                 <input asp-for="GroceryLimit" class="form-control" />
                 <span asp-validation-for="GroceryLimit" class="text-danger"></span>
             </div>
-            <div class="form-group class=" col s12 m4 l4"">
-                <label for="HousingLimit" style="color:#b2dfdb; font-weight:bold; font-size:25px;">Housing/Rent Budget</label>
+            <div class="form-group col s12 m3 l3">
+                <label for="HousingLimit" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Housing/Rent Budget</label>
                 @*<label asp-for="HousingLimit" class="control-label"></label>*@
                 <input asp-for="HousingLimit" class="form-control" />
                 <span asp-validation-for="HousingLimit" class="text-danger"></span>
             </div>
+            <div class="col s12 m3 l3"></div>
         </div>
 
         <div class="row">
-            <div class="form-group col s12 m4 l4">
-                <label for="EntLimit" style="color:#b2dfdb; font-weight:bold; font-size:25px;">Entertainment Budget</label>
+            <div class="col s12 m3 l3"></div>
+            <div class="form-group col s12 m3 l3">
+                <label for="EntLimit" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Entertainment Budget</label>
                 @*<label asp-for="EntLimit" class="control-label"></label>*@
                 <input asp-for="EntLimit" class="form-control" />
                 <span asp-validation-for="EntLimit" class="text-danger"></span>
             </div>
-            <div class="form-group class=" col s12 m4 l4"">
-                <label for="BillsLimit" style="color:#b2dfdb; font-weight:bold; font-size:25px;">Bills Budget</label>
+            <div class="form-group col s12 m3 l3">
+                <label for="BillsLimit" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Bills Budget</label>
                 @*<label asp-for="BillsLimit" class="control-label"></label>*@
                 <input asp-for="BillsLimit" class="form-control" />
                 <span asp-validation-for="BillsLimit" class="text-danger"></span>
             </div>
+            <div class="col s12 m3 l3"></div>
         </div>
 
         <div class="row">
-            <div class="form-group col s12 m4 l4">
-                <label for="Gas" style="color:#b2dfdb; font-weight:bold; font-size:25px;">Gas/Car Budget</label>
+            <div class="col s12 m3 l3"></div>
+            <div class="form-group col s12 m3 l3">
+                <label for="Gas" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Gas/Car Budget</label>
                 @*<label asp-for="GasLimit" class="control-label"></label>*@
                 <input asp-for="GasLimit" class="form-control" />
                 <span asp-validation-for="GasLimit" class="text-danger"></span>
             </div>
-            <div class="form-group col s12 m4 l4">
-                <label for="MiscLimit" style="color:#b2dfdb; font-weight:bold; font-size:25px;">Miscellaneous Budget</label>
+            <div class="form-group col s12 m3 l3">
+                <label for="MiscLimit" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Miscellaneous Budget</label>
                 @*<label asp-for="MiscLimit" class="control-label"></label>*@
                 <input asp-for="MiscLimit" class="form-control" />
                 <span asp-validation-for="MiscLimit" class="text-danger"></span>
             </div>
+            <div class="col s12 m3 l3"></div>
         </div>
 
-        <div style="margin-top:10px;">
+
+        <div style="margin-top:10px; text-align:center; margin-bottom:50px;">
             <button class="aves-effect waves-light btn-large black-text sharpCorners" style="font-weight:bold; font-size:20px; background-color:#b2dfdb;" type="submit" name="Save">
                 <i class="material-icons left">save</i>Save
             </button>
